# open-agnet

./: README.md  pyproject.toml
app/: main.py  run.py
app/api/: auth.py  chat.py  session.py  skill.py
app/config/: config.yaml
app/core/: auth.py  config.py  db.py  exceptions.py  skill_path.py
app/manager/: memory_manager.py
app/models/: llm_config.py  session.py  user.py
app/prompt/: prompt_builder.py
app/services/: agent_service.py  auth_service.py  memory_service.py  prompt_builder.py  session_service.py  skill_service.py
app/skills/: skills.json
app/tools/: __init__.py  create_skill_tool.py  csv_tool.py  db_tool.py  docx_tool.py  excel_tool.py  file_tools.py  html_tool.py  json_tools.py  markdown_tool.py  pdf_tool.py  search_tool.py  skill_tool.py  web_fetch_tool.py
scripts/: init_mysql.sql
skills/: README.md  skills.json
skills/createSkills/: SKILL.md
skills/weather/: SKILL.md
skills/weather/scripts/: analyze_weather.py
