[project]
name = "agent-platform"
version = "0.1.0"
description = "FastAPI + LangChain based agent platform with Milvus, skills, and JWT auth"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pymilvus>=2.4.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

